added code from branch lutfhi
